# biscuit-component-wasm

./: Cargo.toml  README.md  shell.nix
src/: attenuate.rs  execute.rs  execute_serialized.rs  generate_token.rs  lib.rs  parse_snapshot.rs  parse_token.rs
web/: package.json
