[package]
name = "biscuit-component-wasm"
version = "0.1.0"
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
biscuit-auth = { version = "1.0.0-alpha1", features = ["wasm"] }
rand = "0.7"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
base64 = "0.13"
wee_alloc = "0.4"
nom = "6"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
