[package]
name = "biscuit-wasm-support"
version = "0.5.1"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/biscuit-auth/biscuit-component-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4.5"
biscuit-auth = { version = "5.0.0", features = ["wasm", "serde-error"] }
rand = "0.8"
getrandom = { version = "0.2.10", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
base64 = "0.13"
wee_alloc = "0.4"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"

[profile.release]
codegen-units = 1
opt-level = "z"
